--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -23,7 +23,7 @@ task createNativeDepsDirectories {
 
 task downloadBoost(dependsOn: createNativeDepsDirectories, type: Download) {
     // Use ZIP version as it's faster this way to selectively extract some parts of the archive
-    src 'https://downloads.sourceforge.net/project/boost/boost/1.57.0/boost_1_57_0.zip'
+    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'https://downloads.sourceforge.net/project/boost/boost/1.57.0/boost_1_57_0.zip'
     // alternative
     // src 'http://mirror.nienbo.com/boost/boost_1_57_0.zip'
     onlyIfNewer true
@@ -39,7 +39,7 @@ task prepareBoost(dependsOn: downloadBoost, type: Copy) {
 }
 
 task downloadDoubleConversion(dependsOn: createNativeDepsDirectories, type: Download) {
-    src 'https://github.com/google/double-conversion/archive/v1.1.1.tar.gz'
+    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/double-conversion-1.1.1.tar.gz" : 'https://github.com/google/double-conversion/archive/v1.1.1.tar.gz'
     onlyIfNewer true
     overwrite false
     dest new File(downloadsDir, 'double-conversion-1.1.1.tar.gz')
@@ -55,7 +55,7 @@ task prepareDoubleConversion(dependsOn: downloadDoubleConversion, type: Copy) {
 }
 
 task downloadFolly(dependsOn: createNativeDepsDirectories, type: Download) {
-    src 'https://github.com/facebook/folly/archive/v0.50.0.tar.gz'
+    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/folly-0.50.0.tar.gz" : 'https://github.com/facebook/folly/archive/v0.50.0.tar.gz'
     onlyIfNewer true
     overwrite false
     dest new File(downloadsDir, 'folly-0.50.0.tar.gz');
@@ -71,7 +71,7 @@ task prepareFolly(dependsOn: downloadFolly, type: Copy) {
 }
 
 task downloadGlog(dependsOn: createNativeDepsDirectories, type: Download) {
-    src 'https://github.com/google/glog/archive/v0.3.3.tar.gz'
+    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/glog-0.3.3.tar.gz" : 'https://github.com/google/glog/archive/v0.3.3.tar.gz'
     onlyIfNewer true
     overwrite false
     dest new File(downloadsDir, 'glog-0.3.3.tar.gz')
@@ -113,7 +113,7 @@ task mkJSCdir() << {
 }
 
 task downloadJSCHeaders(type: Download, dependsOn: 'mkJSCdir') {
-    def jscAPIBaseURL = 'https://svn.webkit.org/repository/webkit/!svn/bc/174650/trunk/Source/JavaScriptCore/API/'
+    def jscAPIBaseURL = project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/jsc/" : 'https://svn.webkit.org/repository/webkit/!svn/bc/174650/trunk/Source/JavaScriptCore/API/'
     def jscHeaderFiles = ['JSBase.h', 'JSContextRef.h', 'JSObjectRef.h', 'JSRetainPtr.h', 'JSStringRef.h', 'JSValueRef.h', 'WebKitAvailability.h']
     def output = new File(downloadsDir, 'jsc')
     output.mkdirs()
