--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -23,7 +23,7 @@ task createNativeDepsDirectories {
 
 task downloadBoost(dependsOn: createNativeDepsDirectories, type: Download) {
     // Use ZIP version as it's faster this way to selectively extract some parts of the archive
-    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'https://downloads.sourceforge.net/project/boost/boost/1.57.0/boost_1_57_0.zip'
+    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'http://sourceforge.mirrorservice.org/b/bo/boost/boost/1.57.0/boost_1_57_0.zip'
     // alternative
     // src 'http://mirror.nienbo.com/boost/boost_1_57_0.zip'
     onlyIfNewer true
@@ -142,7 +142,9 @@ def getNdkBuildName() {
         return "ndk-build"
     }
 }
-
+// If you're getting Error:No such property: sdkHandler for class: com.android.build.gradle.AppPlugin
+// Then set ANDROID_NDK env parameter
+// This is a Gradle >= 3.3 issue
 def findNdkBuildFullPath() {
     // we allow to provide full path to ndk-build tool
     if (hasProperty('ndk.command')) {
@@ -269,6 +271,8 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-ws:2.5.0'
     compile 'com.squareup.okio:okio:1.6.0'
     compile 'org.webkit:android-jsc:r174650'
+  // Adding Firebase due to: http://stackoverflow.com/q/38595171/606351
+    compile 'com.google.firebase:firebase-core:9.2.1'
 
     testCompile "junit:junit:${JUNIT_VERSION}"
     testCompile "org.powermock:powermock-api-mockito:${POWERMOCK_VERSION}"
