--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -23,7 +23,7 @@ task createNativeDepsDirectories {
 
 task downloadBoost(dependsOn: createNativeDepsDirectories, type: Download) {
     // Use ZIP version as it's faster this way to selectively extract some parts of the archive
-    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'http://mirror.nienbo.com/boost/boost_1_57_0.zip' // http://sourceforge.mirrorservice.org/b/bo/boost/boost/1.57.0/boost_1_57_0.zip'
+    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'https://sourceforge.mirrorservice.org/b/bo/boost/boost/1.57.0/boost_1_57_0.zip'
     // alternative
     // src 'http://mirror.nienbo.com/boost/boost_1_57_0.zip'
     onlyIfNewer true
@@ -219,7 +219,7 @@ task packageReactNdkLibs(dependsOn: buildReactNdkLib, type: Copy) {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 16
