--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -218,8 +218,8 @@ task packageReactNdkLibs(dependsOn: buildReactNdkLib, type: Copy) {
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '27.0.2'
 
     defaultConfig {
         minSdkVersion 16
@@ -259,8 +259,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'src/main/third-party/java/infer-annotations/', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:recyclerview-v7:23.0.1' // Stick to 23.0.1 because of shit with NotAnimatedItemAnimator.java not compiling
     compile 'com.facebook.fresco:fresco:0.8.1'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.8.1'
     compile 'com.facebook.stetho:stetho:1.2.0'
