--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -15,6 +15,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 def downloadsDir = new File("$buildDir/downloads")
 def thirdPartyNdkDir = new File("$buildDir/third-party-ndk")
+project.ext.react_alt_boost_location = "$projectDir/../etc/"
 
 task createNativeDepsDirectories {
     downloadsDir.mkdirs()
@@ -33,6 +34,13 @@ task downloadBoost(dependsOn: createNativeDepsDirectories, type: Download) {
 
 task prepareBoost(dependsOn: downloadBoost, type: Copy) {
     from zipTree(downloadBoost.dest)
+    from 'src/main/jni/third-party/boost/Android.mk'
+    include 'boost_1_57_0/boost/**/*.hpp', 'Android.mk'
+    into "$thirdPartyNdkDir/boost"
+}
+
+task prepareBoostFromLocal(type: Copy) {
+    from zipTree(new File(project.getProperty('react_alt_boost_location'), 'boost_1_57_0.zip'))
     from 'src/main/jni/third-party/boost/Android.mk'
     include 'boost_1_57_0/boost/**/*.hpp', 'Android.mk'
     into "$thirdPartyNdkDir/boost"
@@ -186,7 +194,7 @@ def getNdkBuildFullPath() {
     return ndkBuildFullPath
 }
 
-task buildReactNdkLib(dependsOn: [prepareJSC, prepareBoost, prepareDoubleConversion, prepareFolly, prepareGlog], type: Exec) {
+task buildReactNdkLib(dependsOn: [prepareJSC, prepareBoostFromLocal, prepareDoubleConversion, prepareFolly, prepareGlog], type: Exec) {
     inputs.file('src/main/jni/react')
     outputs.dir("$buildDir/react-ndk/all")
     commandLine getNdkBuildFullPath(),
@@ -219,7 +227,7 @@ task packageReactNdkLibs(dependsOn: buildReactNdkLib, type: Copy) {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '27.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 16
