--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -24,7 +24,7 @@ task createNativeDepsDirectories {
 
 task downloadBoost(dependsOn: createNativeDepsDirectories, type: Download) {
     // Use ZIP version as it's faster this way to selectively extract some parts of the archive
-    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'https://sourceforge.mirrorservice.org/b/bo/boost/boost/1.57.0/boost_1_57_0.zip'
+    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'https://netix.dl.sourceforge.net/project/boost/boost/1.57.0/boost_1_57_0.zip'
     // alternative
     // src 'http://mirror.nienbo.com/boost/boost_1_57_0.zip'
     onlyIfNewer true
@@ -146,7 +146,7 @@ task prepareJSC(dependsOn: downloadJSCHeaders) << {
     copy {
         from zipTree(configurations.compile.fileCollection { dep -> dep.name == 'android-jsc' }.singleFile)
         from {downloadJSCHeaders.dest}
-        from 'src/main/jni/third-party/jsc/Android.mk'
+        from 'src/main/jni/third-party/jsc'
         include 'jni/**/*.so', '*.h', 'Android.mk'
         filesMatching('*.h', { fname -> fname.path = "JavaScriptCore/${fname.path}"})
         into "$thirdPartyNdkDir/jsc";
@@ -217,7 +217,7 @@ task buildReactNdkLib(dependsOn: [prepareJSC, prepareBoostFromLocal, prepareDoub
             '--jobs', project.hasProperty("jobs") ? project.property("jobs") : Runtime.runtime.availableProcessors()
 }
 
-task cleanReactNdkLib(type: Exec) {
+task cleanReactNdkLib(dependsOn: [prepareJSC, prepareBoostFromLocal, prepareDoubleConversion, prepareFolly, prepareGlog], type: Exec) {
     commandLine getNdkBuildFullPath(),
             'NDK_PROJECT_PATH=null',
             'NDK_OUT=' + temporaryDir,
@@ -256,7 +256,7 @@ android {
 
     sourceSets.main {
         jni.srcDirs = []
-        jniLibs.srcDir "$buildDir/react-ndk/exported"
+        jniLibs.srcDirs = ["$buildDir/react-ndk/exported", 'src/main/jni/third-party/jsc/jni']
         res.srcDirs = ['src/main/res/devsupport', 'src/main/res/shell']
         java {
           srcDirs = ['src/main/java', 'src/main/libraries/soloader']
