--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -24,7 +24,7 @@ task createNativeDepsDirectories {
 
 task downloadBoost(dependsOn: createNativeDepsDirectories, type: Download) {
     // Use ZIP version as it's faster this way to selectively extract some parts of the archive
-    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'https://sourceforge.mirrorservice.org/b/bo/boost/boost/1.57.0/boost_1_57_0.zip'
+    src project.hasProperty('react_alt_dls_location') ? project.property("react_alt_dls_location") + "/boost_1_57_0.zip" : 'https://netix.dl.sourceforge.net/project/boost/boost/1.57.0/boost_1_57_0.zip'
     // alternative
     // src 'http://mirror.nienbo.com/boost/boost_1_57_0.zip'
     onlyIfNewer true
